[package]
name = "stf"
version = "0.1.0"
authors = ["Dusk <crepusculop2p@proton.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
serde = { version = "1", default-features = false, features = ["derive"] }
confy = "0.5"
